# ws2tcp-local-ffi

./: CHANGELOG.md  Cargo.toml  README.md
include/: ws2tcp_local_ffi.h
src/: lib.rs
